--- a/web/sass/_structure_main.scss
+++ b/web/sass/_structure_main.scss
@@ -37,10 +37,11 @@ $panelWidth : 0;
     left :            0;
     width :        100%;
     height :       100%;
-    z-index :         0;
+    z-index :         2;
 }
 
 #ajaxContainer {
+    position: relative;
     display :    table-cell;
     text-align :     center;
     vertical-align : middle;
@@ -48,6 +49,7 @@ $panelWidth : 0;
 }
 
 #ajaxContent {
+    position: relative;
     margin :   auto;
     display : block;
     width :    100%;
